backend/docs/typecheck/reports/mypy_baseline_typecheck.txt
venv312/bin/python -m mypy \
		apps/core/infrastructure/throttling.py \
		apps/core/middleware_request_id.py \
		apps/core/exceptions_handlers.py \
		apps/core/httpx_clients.py \
		apps/core/config/django_runtime.py \
		apps/core/protocols/common_protocols.py \
		apps/core/dto/auth.py \
		apps/core/llm/config.py \
		apps/core/llm/service.py \
		apps/core/llm/router.py \
		apps/core/llm/backends/base.py \
		apps/core/services/wiring.py \
		apps/core/services/system_config_service.py \
		apps/core/security/secret_codec.py \
		apps/core/dependencies/automation_sms.py \
		apps/core/security/scrub.py \
		apps/automation/services/document/document_processing_service_adapter.py \
		apps/automation/services/token/trigger_reasons.py \
		apps/automation/services/scraper/core/token_service.py \
		apps/cases/services/case/case_service.py \
		apps/contracts/services/contract/contract_service_adapter.py \
		apps/organization/services/org_access_computation_service.py \
		apps/organization/services/wiring.py \
		--follow-imports=skip \
		--config-file mypy.ini
apps/automation/services/document/document_processing_service_adapter.py:24:5: error:
Function is missing a return type annotation  [no-untyped-def]
        def __init__(self):
        ^
apps/automation/services/document/document_processing_service_adapter.py:24:5: note: Use "-> None" if function does not return a value
apps/automation/services/document/document_processing_service_adapter.py:77:13: error:
Returning Any from function declared to return "str"  [no-any-return]
                return extract_docx_text(file_path, limit=limit)
                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
apps/automation/services/document/document_processing_service_adapter.py:103:13: error:
Returning Any from function declared to return "str"  [no-any-return]
                return text
                ^~~~~~~~~~~
apps/contracts/services/contract/contract_service_adapter.py:74:9: error:
Returning Any from function declared to return "list[dict[str, Any]]" 
[no-any-return]
            return self.contract_service.get_all_parties(contract_id)
            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
apps/contracts/services/contract/contract_service_adapter.py:119:9: error:
Returning Any from function declared to return "list[Any]"  [no-any-return]
            return self.contract_service.supplementary_agreement_query_ser...
            ^
apps/core/security/secret_codec.py:38:9: error: Returning Any from function
declared to return "str"  [no-any-return]
            return plain.decode()
            ^~~~~~~~~~~~~~~~~~~~~
apps/core/exceptions_handlers.py:365:9: error: Returning Any from function
declared to return "HttpResponse"  [no-any-return]
            return api.create_response(request, payload, status=status)
            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
apps/automation/services/scraper/core/token_service.py:35:27: error:
Incompatible default for argument "expires_in" (default has type "None",
argument has type "int")  [assignment]
            expires_in: int = None,
                              ^~~~
apps/automation/services/scraper/core/token_service.py:35:27: note: PEP 484 prohibits implicit Optional. Accordingly, mypy has changed its default to no_implicit_optional=True
apps/automation/services/scraper/core/token_service.py:35:27: note: Use https://github.com/hauntsaninja/no_implicit_optional to automatically upgrade your codebase
apps/automation/services/scraper/core/token_service.py:37:30: error:
Incompatible default for argument "credential_id" (default has type "None",
argument has type "int")  [assignment]
            credential_id: int = None
                                 ^~~~
apps/automation/services/scraper/core/token_service.py:37:30: note: PEP 484 prohibits implicit Optional. Accordingly, mypy has changed its default to no_implicit_optional=True
apps/automation/services/scraper/core/token_service.py:37:30: note: Use https://github.com/hauntsaninja/no_implicit_optional to automatically upgrade your codebase
apps/automation/services/scraper/core/token_service.py:111:17: error: Returning
Any from function declared to return "str | None"  [no-any-return]
                    return token
                    ^~~~~~~~~~~~
apps/automation/services/scraper/core/token_service.py:135:17: error: Returning
Any from function declared to return "str | None"  [no-any-return]
                    return token_obj.token
                    ^~~~~~~~~~~~~~~~~~~~~~
apps/automation/services/scraper/core/token_service.py:268:9: error: Returning
Any from function declared to return "str | None"  [no-any-return]
            return await sync_to_async(self.service.get_token)(site_name, ...
            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~...
apps/automation/services/scraper/core/token_service.py:311:9: error: Returning
Any from function declared to return "str | None"  [no-any-return]
            return await sync_to_async(self.service.get_token)(site_name, ...
            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~...
Found 13 errors in 5 files (checked 23 source files)
make: *** [typecheck] Error 1
